WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293438
[css-anchor-position-1] anchor-scope scopes all names instead of affected names
https://bugs.webkit.org/show_bug.cgi?id=293438
Summary
[css-anchor-position-1] anchor-scope scopes all names instead of affected names
fantasai
Reported
2025-05-22 11:21:40 PDT
Created
attachment 475341
[details]
testcase Overview: The anchor-scope property traps the specified anchor-names from being exposed outside the element's subtree. But our implementation traps any anchor that happens to have a matching name, even if it has other names which are not trapped. Steps to Reproduce: 1. Create an anchor with two anchor names. 2. Wrap it in an anchor-scope that only has one of those names. 3. Try to attach an anchor outside this subtree to the unscoped name. Expected Result: Attachment works. Actual Result: Attachment does not work. Additional Information: See anchorScopeForAnchorElement() for the source of the problem.
Attachments
testcase
(294 bytes, text/html)
2025-05-22 11:21 PDT
,
fantasai
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-22 11:21:51 PDT
<
rdar://problem/151866809
>
fantasai
Comment 2
2025-05-26 21:04:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45935
EWS
Comment 3
2025-05-29 15:02:41 PDT
Committed
295576@main
(013f4f81fdd5): <
https://commits.webkit.org/295576@main
> Reviewed commits have been landed. Closing PR #45935 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug