anchor-scope scopes names, not elements https://bugs.webkit.org/show_bug.cgi?id=293438 rdar://151866809

Reviewed by Antti Koivisto.

Previously we were eliminating an element from consideration if it had
any of the scoped names. But the names which are not scoped should still
be available for matching.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-scope-basic.html:
Update test to check this case.

* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::anchorScopeForAnchorName):
Scope the name, not the element.

(WebCore::Style::isAcceptableAnchorElement):
Adjust function call.

(WebCore::Style::findLastAcceptableAnchorWithName):
(WebCore::Style::anchorScopeForAnchorElement): Deleted.
Renamed to reflect focus on name scoping, see above.

Canonical link: https://commits.webkit.org/295576@main